# Qwen_3_5_Vision_Setup_Dockers

./: .gitignore  README.md  download_qwen_models.sh  llamacpp_image_call.py  pyproject.toml  vllm_image_call.py  vllm_video_call.py
Inference_Single/: docker-compose LLaMACPP MiniMax-M2.1.yaml  docker-compose LLaMACPP Qwen3.5-0.8B.yaml  docker-compose LLaMACPP Qwen3.5-122B-A10B.yaml  docker-compose LLaMACPP Qwen3.5-27B.yaml  docker-compose LLaMACPP Qwen3.5-2B.yaml  docker-compose LLaMACPP Qwen3.5-35B-A3B.yaml  docker-compose LLaMACPP Qwen3.5-9B.yaml  docker-compose vLLM Qwen3.5-0.8B.yaml  docker-compose vLLM Qwen3.5-27B-FP8.yaml  docker-compose vLLM Qwen3.5-27B-GPTQ-Int4.yaml  docker-compose vLLM.yaml
Qwen3.5-main/: README  api_server.py  download_qwen_models.sh  evaluate_videos.py  gui.py  prompts.yaml  video_test.py  vllm_video_call.py
Qwen3.5-main/docker/: docker-compose vLLM Qwen3.5-9B.yaml
Qwen3.5-main/docs/: unified-server.md
Qwen3.5-main/tests/: test_api_server.py  test_config.py  (+2 more)
docker/: docker-compose vLLM Qwen3.5-4B-lab.yaml
scripts/: mm_lab_smoke.py  mm_lab_video_perf_suite.py
tests/: test_mm_lab_api.py  test_mm_lab_benchmark_runner.py  test_mm_lab_media_preprocess.py  test_mm_lab_payload_builder.py  test_mm_lab_result_store.py  test_mm_lab_schemas.py  test_mm_lab_ui_presets.py  test_mm_lab_vllm_client.py
visual_experimentation_app/: README.md  __init__.py  __main__.py  api.py  benchmark_graphs.py  benchmark_runner.py  config.py  main.py  media_preprocess.py  payload_builder.py  result_store.py  schemas.py  ui.py  ui_presets.py  vllm_client.py
(+15 files in other folders)
