[project]
name = "qwen-image"
version = "0.1.0"
description = "Local Qwen3.5 multimodal inference setup with vLLM and llama.cpp."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiofiles>=24.1.0",
  "gradio>=6.9.0",
  "hf-transfer>=0.1.9",
  "huggingface-hub>=1.6.0",
  "mypy>=1.19.1",
  "openai>=2.26.0",
  "pyyaml>=6.0.2",
  "ruff>=0.15.5",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]
ignore = ["D203", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
